--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>阿拉丁催收系统2.0</title><script src=_static/webCall/jquery-1.7.2.min.js></script><script src=_static/webCall/CallCenter.js></script><link rel=stylesheet href=_static/icon/iconfont.css><link href=./_static/css/app.a79e98774461ec4880f678c01c27fcad.css rel=stylesheet></head><body><script type=text/javascript>window.onbeforeunload = function (e) {
+<!DOCTYPE html><html><head><meta charset=utf-8><title>阿拉丁催收系统2.0</title><script src=_static/webCall/jquery-1.7.2.min.js></script><script src=_static/webCall/CallCenter.js></script><link rel=stylesheet href=_static/icon/iconfont.css><link href=_static/css/app.a79e98774461ec4880f678c01c27fcad.css rel=stylesheet></head><body><script type=text/javascript>window.onbeforeunload = function (e) {
       let uuid = sessionStorage.getItem("dyUuid")
       let data = JSON.parse(sessionStorage.getItem("calledData"))
       if(!uuid || !data){
@@ -76,4 +76,4 @@
           }
         });
       }
-    }</script><div id=app></div><script type=text/javascript src=./_static/js/manifest.963943c6a506b27ee738.js></script><script type=text/javascript src=./_static/js/vendor.bef82ea4eb2b4bfe618d.js></script><script type=text/javascript src=./_static/js/app.73012d0b531dabb1fd1f.js></script></body></html>
+    }</script><div id=app></div><script type=text/javascript src=_static/js/manifest.963943c6a506b27ee738.js></script><script type=text/javascript src=_static/js/vendor.bef82ea4eb2b4bfe618d.js></script><script type=text/javascript src=_static/js/app.73012d0b531dabb1fd1f.js></script></body></html>
