--- a/index.html
+++ b/index.html
@@ -1,79 +1,1 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>阿拉丁催收系统2.0</title><script src=_static/webCall/jquery-1.7.2.min.js></script><script src=_static/webCall/CallCenter.js></script><link rel=stylesheet href=_static/icon/iconfont.css><link href=_static/css/app.a79e98774461ec4880f678c01c27fcad.css rel=stylesheet></head><body><script type=text/javascript>window.onbeforeunload = function (e) {
-      let uuid = sessionStorage.getItem("dyUuid")
-      let data = JSON.parse(sessionStorage.getItem("calledData"))
-      if(!uuid || !data){
-        return
-      }
-      var n = e.screenX - window.screenLeft;
-      var b = n > document.documentElement.scrollWidth-20;
-      sessionStorage.removeItem('dyUuid')
-      sessionStorage.removeItem('calledData')
-      if(b && e.clientY < 0 || e.altKey)
-      {
-        $.ajax({
-          type:"post",    //请求方式
-          async:true,    //是否异步
-          url:"/api/arcCollectRemark/addArcCollectRemark",
-          dataType:"jsonp",    //跨域json请求一定是jsonp
-          jsonp: "callbackparam",    //跨域请求的参数名，默认是callback
-              //jsonpCallback:"successCallback",    //自定义跨域参数值，回调函数名也是一样，默认为jQuery自动生成的字符串
-          data:{
-           phoneNumberId: data.id,
-           operatorNo: JSON.parse(sessionStorage.getItem("outBound")).operatorId,
-           called: data.phoneNumber,
-           reqTime: "",
-           resTime: "",
-           terminateTime: "",
-           wav: "",
-           uuid: uuid,
-           results: "",
-           reaction: "",
-           mode: "",
-           remark: "未保存刷新或关闭浏览器",
-          },    //请求参数
-          beforeSend: function(request) {            
-           request.setRequestHeader("token", sessionStorage.getItem("token"));
-           request.setRequestHeader("timespan", sessionStorage.getItem("timespan"));
-          },
-          success: function(data) {
-              alert("ok")
-          },
-          error: function() {
-              //请求出错处理
-          }
-        });
-      }else{
-        $.ajax({
-          type:"post",    //请求方式
-          async:true,    //是否异步
-          url:"/api/arcCollectRemark/addArcCollectRemark",
-          dataType:"jsonp",    //跨域json请求一定是jsonp
-          jsonp: "callbackparam",    //跨域请求的参数名，默认是callback
-              //jsonpCallback:"successCallback",    //自定义跨域参数值，回调函数名也是一样，默认为jQuery自动生成的字符串
-          data:{
-           phoneNumberId: data.id,
-           operatorNo: JSON.parse(sessionStorage.getItem("outBound")).operatorId,
-           called: data.phoneNumber,
-           reqTime: "",
-           resTime: "",
-           terminateTime: "",
-           wav: "",
-           uuid: uuid,
-           results: "",
-           reaction: "",
-           mode: "",
-           remark: "未保存刷新或关闭浏览器",
-          },    //请求参数
-          beforeSend: function(request) {            
-           request.setRequestHeader("token", sessionStorage.getItem("token"));
-           request.setRequestHeader("timespan", sessionStorage.getItem("timespan"));
-          },
-          success: function(data) {
-              alert("ok")
-          },
-          error: function() {
-              //请求出错处理
-          }
-        });
-      }
-    }</script><div id=app></div><script type=text/javascript src=_static/js/manifest.963943c6a506b27ee738.js></script><script type=text/javascript src=_static/js/vendor.bef82ea4eb2b4bfe618d.js></script><script type=text/javascript src=_static/js/app.73012d0b531dabb1fd1f.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>催收系统</title><script src=_static/webCall/jquery-1.7.2.min.js></script><link rel=stylesheet href=_static/icon/iconfont.css><link href=./_static/css/app.39a9969205568b9894e8ba9005788ccd.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./_static/js/manifest.963943c6a506b27ee738.js></script><script type=text/javascript src=./_static/js/vendor.75a78ff8b955b72d7445.js></script><script type=text/javascript src=./_static/js/app.6b647daa41032286f167.js></script></body></html>
